Fix radio-button misalignment in a systemic way

--- a/ide/app/spark_polymer_ui.css
+++ b/ide/app/spark_polymer_ui.css
@@ -232,11 +232,14 @@ label {
   font-weight: 500;
 }
 
-#mobileDeployDialog #adb, #mobileDeployDialog #ip {
-  position: relative;
-  top: 2px;
+.vert-align-box {
+  display:flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-:host(.mac) #mobileDeployDialog #adb, :host(.mac) #mobileDeployDialog #ip {
-  top: -1px;
+.vert-align-box > * {
+  margin-top: 0;
+  margin-bottom: 0;
 }
